[tool.poetry]
name = "age-and-gender-prediction-using-deep-learning"
version = "0.1.0"
description = ""
authors = ["OYEKU ABDULQUADRI OLUWASEUN <82169558+oyeku-A@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "age_and_gender_prediction_using_deep_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
tensorflow = "^2.17.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
